--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -93,3 +93,63 @@ header .flex-container {
     font-weight: bold;
     font-size: 2rem;
 }
+
+/********** SERVICES **********/
+
+.section-flex {
+    display: flex;
+    justify-content: center;
+}
+
+.service {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    height: 8rem;
+    width: 5rem;
+    margin: 3rem;
+}
+
+.service img {
+    width: 5rem;
+    margin-bottom: 1rem;
+}
+
+.service img.p-icon {
+    width: 3.5rem;
+}
+
+/********** INFO **********/
+
+.info {
+    margin-right: 5%;
+    margin-bottom: 5rem;
+    width: 35%;
+}
+
+.info-col {
+    font-weight: bold;
+    font-size: 1rem;
+    width: 10rem;
+    background-color: cadetblue;
+    color: #fff;
+    padding: 0.5rem 1.25rem;
+    margin-bottom: 1rem;
+}
+
+/********** FOOTER **********/
+
+footer {
+    display: flex;
+    align-items: center;
+    background-color: azure;
+    padding: 4rem 2rem;
+}
+
+footer img {
+    height: 1.5rem;
+    margin-left: 2rem;
+    margin-right: 1rem;
+}
